--- a/zomato_home_page.html
+++ b/zomato_home_page.html
@@ -171,7 +171,7 @@
                     <div class="card">
                         <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwallpapersdsc.net%2Fwp-content%2Fuploads%2F2016%2F09%2FJunk-Food-Computer-Wallpaper.jpg&f=1&nofb=1" height="100%" width="100%"/>
                         <div class="card-bottom">
-                            <p class="h4 m-0 mt-2 text-center">Order Online</p>
+                            <p class="h4 m-0 mt-2 text-center"><a href="order_online.html">Order Online</a></p>
                         </div>
                     </div>
                 </div>
@@ -206,24 +206,24 @@
     <section id="popular-locations">
         <div class="container">
             <div class="d-flex justify-content-center">
-                <p class="popular-heading">Popular locations in and around <span class="font-weight-bold">Kolkata</span></p>
+                <p class="popular-heading">Popular locations in and around <span class="font-weight-bold">Dehradun</span></p>
             </div>
             <div class="row mt-4">
                 <div class="col-md-4">
                     <div class="d-flex align-items-center locations-div">
-                        <p class="m-0 ml-3 h5">Park Street Area</p>
+                        <p class="m-0 ml-3 h5">Rajpur</p>
                         <i class="fa fa-arrow-right ml-auto mr-4"></i>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex align-items-center locations-div">
-                        <p class="m-0 ml-3 h5">Sector 5, Salt Lake</p>
+                        <p class="m-0 ml-3 h5">Jakhan</p>
                         <i class="fa fa-arrow-right ml-auto mr-4"></i>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex align-items-center locations-div">
-                        <p class="m-0 ml-3 h5">Ballygunge</p>
+                        <p class="m-0 ml-3 h5">Paltan Bazaar</p>
                         <i class="fa fa-arrow-right ml-auto mr-4"></i>
                     </div>
                 </div>
@@ -232,22 +232,51 @@
             <div class="row mt-4">
                 <div class="col-md-4">
                     <div class="d-flex align-items-center locations-div">
-                        <p class="m-0 ml-3 h5">Chinar Park</p>
+                        <p class="m-0 ml-3 h5">Malsi</p>
                         <i class="fa fa-arrow-right ml-auto mr-4"></i>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex align-items-center locations-div">
-                        <p class="m-0 ml-3 h5">Mukundapur</p>
+                        <p class="m-0 ml-3 h5">Majra</p>
                         <i class="fa fa-arrow-right ml-auto mr-4"></i>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="d-flex align-items-center locations-div">
-                        <p class="m-0 ml-3 h5">Rashbehari</p>
+                        <p class="m-0 ml-3 h5">Khurbura</p>
                         <i class="fa fa-arrow-right ml-auto mr-4"></i>
                     </div>
                 </div>
+            </div>
+                <div class="row mt-4">
+                    <div class="col-md-4">
+                        <div class="d-flex align-items-center locations-div">
+                            <p class="m-1 ml-3 h5">Garhi Cantt</p>
+                            <i class="fa fa-arrow-right ml-auto mr-4"></i>
+                        </div>
+                    </div>
+                        <div class="col-md-4">
+                            <div class="d-flex align-items-center locations-div">
+                                <p class="m-0 ml-3 h5">jogiwaala</p>
+                                <i class="fa fa-arrow-right ml-auto mr-4"></i>
+                            </div>
+                        </div>
+                            <div class="col-md-4">
+                                <div class="d-flex align-items-center locations-div">
+                                    <p class="m-0 ml-3 h5">Karanpur</p>
+                                    <i class="fa fa-arrow-right ml-auto mr-4"></i>
+                                </div>
+                            </div>
+                    </div>
+                        <div class="row mt-4">
+                                <div class="col-md-4">
+                                    <div class="d-flex align-items-center locations-div">
+                                        <p class="m-0 ml-3 h5">Prem Nagar</p>
+                                        <i class="fa fa-arrow-right ml-auto mr-4"></i>
+                                    </div>
+                                </div>
+                        </div>
             </div>
         </div>
     </section>
